--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,9 +177,10 @@ attachments.path=data/attachments
 
 # Or, specify mail host configuration
 mail.smtp.host=smtp.gmail.com
-mail.smtp.user=contactmanager24
+mail.smtp.user=contactmanager24@gmail.com
 mail.smtp.pass=V4!ioKAM^$nmoNn2!$
-mail.smtp.channel=ssl
+mail.smtp.channel=tls
+mail.smtp.port=587
 
 # Url-resolving in Jobs
 # ~~~~~~
@@ -191,7 +192,7 @@ mail.smtp.channel=ssl
 # Jobs executor
 # ~~~~~~
 # Size of the Jobs pool
-# play.jobs.pool=10
+play.jobs.pool=10
 
 # Execution pool
 # ~~~~~
